<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="60dp"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAuthentication"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/administrators"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btTeacher"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/teacher"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btStudent"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/student"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>