<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18dp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="45dp"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:gravity="center"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btReset"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="@string/reset"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etCourse"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/please_enter_the_course_name"
                    android:gravity="center"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/starttime"
                    android:gravity="center"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/endtime"
                    android:gravity="center"/>


            </LinearLayout>

            <Button
                android:id="@+id/btAdd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/add_course"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowManage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>