<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18dp"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/kq"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:text="@string/attendance_page"
                android:gravity="center"/>


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/kq"
                android:background="@color/teal_700" />


            <Button
                android:id="@+id/btAddStudent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/add_students"
                android:layout_below="@id/spinner"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowManage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_below="@id/btAddStudent"
                android:layout_above="@id/btAdd"/>

            <Button
                android:id="@+id/btAdd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/add_attendance"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>